# devops

./: .env  .mypy.ini  .ruff.toml  Dockerfile.fastapi  Dockerfile.postgres  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: mypy.yml  ruff.yml
app/: __main__.py
app/api/: __init__.py
app/api/routes/: users.py
app/api/schemes/: __init__.py  user.py
app/core/: settings.py
app/core/database/: database.py
app/core/database/models/: __init__.py  model.py  user.py
app/crud/: __init__.py  user.py
