[tool.poetry]
name = "devops"
version = "0.1.0"
description = "Работа с Docker, GitHub и GitHub Actions"
authors = ["kramber1024 <kramber268@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
